--- a/group_page.html
+++ b/group_page.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- Local CSS -->
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -22,7 +23,8 @@
         <a class="navbar-brand" href="group_page.html">
             <img src="logo/Logo_Green-1.png" width="50" height="50" alt="">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -41,18 +43,26 @@
         </div>
     </nav>
 
-    <div class="container-fluid container-1">
+    <div class="container-fluid">
         <div>
             <h1 class="title">BFA CTRL Z</h1>
         </div>
         <div class="biotext d-flex">
             <!-- DESCRIPTION OF EXHIBITION-->
             <p class="col-lg-8">
-                Ctrl Z is a collective digital arts exhibition that features our final dissertations and respective artistic projects. Every artist has personally designed and curated a variety of elements that come together in an intricate and meticulously planned art
-                project, that is backed by thorough research in the respective field. No two projects are the same, as each revolves around a subject that the artist is personally passionate in pursuing, expressed through their preferred medium/media
-                of choice. <br><br> The exhibition as a whole features a wide range of themes, amongst which are explored the topics of identity, duality, homelessness, LGBT relationships, video game and film adaptations, VR and fashion.
+                Ctrl Z is a collective digital arts exhibition that features our final dissertations and respective
+                artistic projects. Every artist has personally designed and curated a variety of elements that come
+                together in an intricate and meticulously planned art
+                project, that is backed by thorough research in the respective field. No two projects are the same, as
+                each revolves around a subject that the artist is personally passionate in pursuing, expressed through
+                their preferred medium/media
+                of choice. <br><br> The exhibition as a whole features a wide range of themes, amongst which are
+                explored the topics of identity, duality, homelessness, LGBT relationships, video game and film
+                adaptations, VR and fashion.
                 There is an over-arching theme of questioning and delving into that which is deeply and innately human.
-                <br><br> Ctrl Z is an opportunity for each artist to showcase their skillset through a project they believe in, and which is the culmination of a year’s worth of trials and error, research, and dedication.
+                <br><br> Ctrl Z is an opportunity for each artist to showcase their skillset through a project they
+                believe in, and which is the culmination of a year’s worth of trials and error, research, and
+                dedication.
             </p>
             <p class="logo-image col-lg-4"><img src="images/logo_gif.gif" alt="" class="logo-image" />
             </p>
@@ -62,12 +72,12 @@
     <div class="container-fluid">
 
         <div class="row d-flex justify-content-center">
-            <div class="col-sm-6">
+            <div class="col-6">
                 <a href="#Exhibition">
                     <h4>EXHIBITION</h4>
                 </a>
             </div>
-            <div class="col-sm-6">
+            <div class="col-6">
                 <!-- INSERT LINK TO CATALOGUE -->
                 <a href="#">
                     <h4>CATALOGUE</h4>
@@ -75,9 +85,11 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid container-2"></div>
+    <div class="rellax container-2">
+        <img src="images/group_photo.png">
+    </div>
     <hr>
-
+    <a name="Exhibition"></a>
     <div data-aos="fade-up" class="gallery container">
         <div class="row d-flex justify-content-center">
 
@@ -687,17 +699,26 @@
         </div>
     </footer>
 
-    <!-- Optional JavaScript -->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js " integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n " crossorigin="anonymous "></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="anonymous "></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js " integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 " crossorigin="anonymous "></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js "
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n "
+        crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js "
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo "
+        crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js "
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 "
+        crossorigin="anonymous "></script>
+    <!-- Optional Js -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js"></script>
+    <script src="site.js"></script>
+    <script>
 
-
+        AOS.init();
+        var rellax = new Rellax('.rellax img');
+    </script>
 </body>
 
 </html>
