--- a/students/rakel_vella/index.html
+++ b/students/rakel_vella/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../../individualpage.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css" />
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:300,400&display=swap" rel="stylesheet">
     <title>Rakel Vella | CTRL Z</title>
@@ -207,7 +208,7 @@
                 </div>
                 <h2>The Glass Box</h2>
                 <p>The Glass Box is an interactive sculpture built using a Raspberry Pi connected to a thermal printer
-                    and an ultrasonic sensor.
+                    and an ultrasonic sensor. The sensor is
 
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
                     pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus.
@@ -226,42 +227,42 @@
                 <!-- External links to social media/websites/etc-->
                 <p>External Links</p>
                 <ul>
-                    <li><a href="https://r4k.buzz/dump-your-data.html" target="_blank">Artist's Website</a></li>
+                    <li><a href="https://r4k.buzz/" target="_blank">Artist's Website</a></li>
                 </ul>
             </div>
         </div>
     </div>
     <!-- /.row -->
     <!-- Related Projects Row -->
-    <div data-aos="fade-up" class="container-fluid container-3">
+    <div data-aos="fade-up" class="container-fluid container-3 gallery-section">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="https://r4k.buzz/dump-your-data.html" target="_blank"> <img class="img-fluid"
+                <a href="https://r4k.buzz/theglassbox" target="_blank"> <img class="img-fluid"
                         src="images/livestream.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4">
-                <img class="img-fluid" src="images/IMG_8868-min.jpg" alt="">
+                <img class="img-fluid" data-lightbox="image" src="images/IMG_8868-min.jpg" alt="">
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <img class="img-fluid" src="images/V_5.png" alt="">
+                <img class="img-fluid" data-lightbox="image-1" src="images/V_5.png" alt="">
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <img class="img-fluid" src="images/thermal_1.gif" alt="">
+                <img class="img-fluid" data-lightbox="image-2" src="images/thermal_1.gif" alt="">
             </div>
         </div>
         <div class="row d-flex align-items-center">
 
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <img class="img-fluid" src="images/main_image.png" alt="">
+                <img class="img-fluid" data-lightbox="image-3" src="images/main_image.png" alt="">
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <img class="img-fluid" src="images/IMG_8868-2-min.jpg" alt="">
+                <img class="img-fluid" data-lightbox="image-4" src="images/IMG_8868-2-min.jpg" alt="">
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <img class="img-fluid" src="images/IMG_8880-min.jpg" alt="">
+                <img class="img-fluid" data-lightbox="image-5" src="images/IMG_8880-min.jpg" alt="">
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <img class="img-fluid" src="images/thermal_2.gif" alt="">
+                <img class="img-fluid" data-lightbox="image-6" src="images/thermal_2.gif" alt="">
             </div>
         </div>
     </div>
@@ -282,8 +283,21 @@
             </div>
         </div>
     </footer>
-
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js "
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n "
+        crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js "
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo "
+        crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js "
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 "
+        crossorigin="anonymous "></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="../../site.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
+
+
     <script>
         AOS.init();
     </script>
@@ -299,16 +313,6 @@
             document.getElementById("main").style.marginRight = "0";
         }
     </script>
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js "
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n "
-        crossorigin="anonymous "></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js "
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo "
-        crossorigin="anonymous "></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js "
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 "
-        crossorigin="anonymous "></script>
 </body>
 
 </html>
