--- a/students/jacob_saliba/index.html
+++ b/students/jacob_saliba/index.html
@@ -282,7 +282,7 @@
     
     
     -->
-    <div data-aos="fade-up" class="container-fluid container-3">
+    <div data-aos="fade-up" class="container-fluid container-3 gallery-section">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
                 <a href="https://www.youtube.com/watch?v=06EuqHdEY_g" target="_blank"> <img class="img-fluid"
