--- a/group_page.html
+++ b/group_page.html
@@ -19,15 +19,16 @@
 </head>
 
 <body>
-    <nav class="navbar  navbar-expand-lg">
-        <a class="navbar-brand" href="group_page.html">
-            <img src="logo/Logo_Green-1.png" width="50" height="50" alt="">
+    <!--NAVBAR-->
+    <nav class="navbar navbar-expand-lg navbar-6">
+        <a class="navbar-brand" href="group_page.html"> <img src="logo/Logo_Green-1.png" width="50" height="50" alt="">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <!-- Collapse button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent15"
+            aria-controls="navbarSupportedContent15" aria-expanded="false" aria-label="Toggle navigation"><span
+                class="navbar-toggler-icon"></span></button>
+        <!-- Collapsible content -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent15">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="#Exhibition">
