--- a/students/hannah_grech_pirotta/index.html
+++ b/students/hannah_grech_pirotta/index.html
@@ -223,10 +223,10 @@
                 <div class="row">
                     <div class="col d-flex align-items-center justify-content-around">
                         <!-- PERSONAL IMAGE, crop your exhibition photo and insert here-->
-                        <img class="img-fluid rounded-circle profile_picture" src="http://placehold.it/150x150"
+                        <img class="img-fluid rounded-circle profile_picture" src="hgp_personalimage.jpg"
                             alt="PERSONAL IMAGE">
                         <!--Change your name and surname here-->
-                        <h3>Name Surname</h3>
+                        <h3>Hannah Grech Pirotta</h3>
                     </div>
                 </div>
                 <!--Change your project name here-->
