Personal Description/Links

--- a/students/hannah_grech_pirotta/index.html
+++ b/students/hannah_grech_pirotta/index.html
@@ -230,27 +230,17 @@
                     </div>
                 </div>
                 <!--Change your project name here-->
-                <h2>Project Name</h2>
+                <h2>paper bags.</h2>
                 <!--Change you project description here, max 150 words-->
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
-                    pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus.
-                    Mauris ultricies, justo eu convallis placerat, felis
-                    enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
-                    pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus.
-                    Mauris ultricies, justo eu convallis placerat,
-                    felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
-                    gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec
-                    metus. Mauris ultricies, justo eu convallis
-                    placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod
-                    odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum
-                    nec metus. Mauris ultricies, justo
-                    eu convallis placerat, felis enim.</p>
+                <p>Her dissertation project involves the creation of a thematic installation that exposes the reality of homelessness in Malta. This large scale infographic presents an individual’s
+direct experience with homelessness, showcasing her personal narrative and reflection on the events. A public service announcement of sorts that pushes the audience to
+reflect upon their value of "home" through current data, highlighted by individual narratives.</p>
                 <hr>
                 <!-- External links to social media/websites/etc-->
                 <p>External Links</p>
                 <ul>
                     <li><a href="https://www.youtube.com/watch?v=a219cU0m24Y" target="_blank">Youtube</a></li>
-                    <li><a href="https://r4k.buzz/dump-your-data.html" target="_blank">Artist's Website</a></li>
+                    <li><a href="http://hannahgrechpirotta.com/" target="_blank">Artist's Website</a></li>
                 </ul>
             </div>
         </div>
