--- a/students/hannah_grech_pirotta/index.html
+++ b/students/hannah_grech_pirotta/index.html
@@ -282,7 +282,7 @@ reflect upon their value of "home" through current data, highlighted by individu
 
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <img class="img-fluid" data-lightbox="image-2" src="abuse2.test.jpg" alt="">
+                <img class="img-fluid" data-lightbox="image-2" src="abuse2_test.jpg" alt="">
 
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
