--- a/students/hannah_grech_pirotta/index.html
+++ b/students/hannah_grech_pirotta/index.html
@@ -275,36 +275,36 @@ reflect upon their value of "home" through current data, highlighted by individu
     <div data-aos="fade-up" class="container-fluid container-3 gallery-section">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <img class="img-fluid" data-lightbox="image" src="bags1_test.jpg" alt="">
+                <img class="img-fluid" data-lightbox="image" src="t2b1.jpg" alt="">
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <img class="img-fluid" data-lightbox="image-1" src="self1_test.jpg" alt="">
+                <img class="img-fluid" data-lightbox="image-1" src="t2self1.jpg" alt="">
 
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <img class="img-fluid" data-lightbox="image-2" src="abuse2_test.jpg" alt="">
+                <img class="img-fluid" data-lightbox="image-2" src="t2loss1.jpg" alt="">
 
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" data-lightbox="image-3" src="bags2_test.jpg" alt="">
+                <a href="#"> <img class="img-fluid" data-lightbox="image-3" src="t2b2.jpg" alt="">
                 </a>
             </div>
         </div>
         <div class="row d-flex align-items-center">
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" data-lightbox="image-4" src="loss2_test.jpg" alt="">
+                <a href="#"> <img class="img-fluid" data-lightbox="image-4" src="t2ab1.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" data-lightbox="image-5" src="abuse3_test.jpg" alt="">
+                <a href="#"> <img class="img-fluid" data-lightbox="image-5" src="t2ab2.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" data-lightbox="image-6" src="loss1_test.jpg" alt="">
+                <a href="#"> <img class="img-fluid" data-lightbox="image-6" src="t2ab3.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" data-lightbox="image-7" src="abuse1_test.jpg" alt="">
+                <a href="#"> <img class="img-fluid" data-lightbox="image-7" src="t2self2.jpg" alt="">
                 </a>
             </div>
         </div>
