--- a/students/hannah_grech_pirotta/index.html
+++ b/students/hannah_grech_pirotta/index.html
@@ -217,7 +217,7 @@
                 1by1
             
             -->
-                <img class="img-fluid" src="mainimage_test.jpg" alt="MAIN PROJECT IMAGE">
+                <img class="img-fluid" src="http://placehold.it/500x500" alt="MAIN PROJECT IMAGE">
             </div>
             <div class="col-md-5 project-info col-xl-4">
                 <div class="row">
