--- a/students/jacob_saliba/index.html
+++ b/students/jacob_saliba/index.html
@@ -288,7 +288,7 @@
                         src="synth31.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="https://www.youtube.com/watch?v=06EuqHdEY_g" target="_blank"> <img class="img-fluid"
+                <a href="synth1313.png" target="_blank"> <img class="img-fluid"
                         src="synth1313.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
