--- a/students/jacob_saliba/index.html
+++ b/students/jacob_saliba/index.html
@@ -295,8 +295,9 @@
                         src="progress-videos-3.gif" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="https://www.youtube.com/watch?v=06EuqHdEY_g" target="_blank"> <img class="img-fluid"
-                        src="synth1.1.png" alt=""> </a>
+                
+                
+                <img class="img-fluid" data-lightbox="image-1" src="synth1.1.png" alt=""> 
             </div>
         </div>
         <div class="row d-flex align-items-center">
