Image Changes and Link Change

--- a/students/hannah_grech_pirotta/index.html
+++ b/students/hannah_grech_pirotta/index.html
@@ -239,8 +239,9 @@ reflect upon their value of "home" through current data, highlighted by individu
                 <!-- External links to social media/websites/etc-->
                 <p>External Links</p>
                 <ul>
-                    <li><a href="https://www.youtube.com/watch?v=a219cU0m24Y" target="_blank">Youtube</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=a219cU0m24Y" target="_blank">Leaflet</a></li>
                     <li><a href="http://hannahgrechpirotta.com/" target="_blank">Artist's Website</a></li>
+                                        <li><a href="https://www.youtube.com/watch?v=a219cU0m24Y" target="_blank">Youtube</a></li>
                 </ul>
             </div>
         </div>
@@ -275,7 +276,7 @@ reflect upon their value of "home" through current data, highlighted by individu
     <div data-aos="fade-up" class="container-fluid container-3 gallery-section">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <img class="img-fluid" data-lightbox="image" src="t2b1.jpg" alt="">
+                <img class="img-fluid" data-lightbox="image" src="bags1.jpg" alt="">
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
                 <img class="img-fluid" data-lightbox="image-1" src="t2self1.jpg" alt="">
@@ -286,25 +287,25 @@ reflect upon their value of "home" through current data, highlighted by individu
 
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" data-lightbox="image-3" src="t2b2.jpg" alt="">
+                <a href="#"> <img class="img-fluid" data-lightbox="image-3" src="t2ab3.jpg" alt="">
                 </a>
             </div>
         </div>
         <div class="row d-flex align-items-center">
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" data-lightbox="image-4" src="t2ab1.jpg" alt="">
+                <a href="#"> <img class="img-fluid" data-lightbox="image-4" src="t2ab2.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" data-lightbox="image-5" src="t2ab2.jpg" alt="">
+                <a href="#"> <img class="img-fluid" data-lightbox="image-5" src="abuse_full.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" data-lightbox="image-6" src="t2ab3.jpg" alt="">
+                <a href="#"> <img class="img-fluid" data-lightbox="image-6" src="abuse_top.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" data-lightbox="image-7" src="t2self2.jpg" alt="">
+                <a href="#"> <img class="img-fluid" data-lightbox="image-7" src="bags2.jpg" alt="">
                 </a>
             </div>
         </div>
