--- a/students/jacob_saliba/index.html
+++ b/students/jacob_saliba/index.html
@@ -306,8 +306,9 @@
                         src="synth1212.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="https://www.youtube.com/watch?v=06EuqHdEY_g" target="_blank"> <img class="img-fluid"
-                        src="progress-videos-2-.gif" alt=""> </a>
+               
+                
+                 <img class="img-fluid" data-lightbox="image-2" src="progress-videos-2-.gif" alt=""> 
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
                 <a href="https://www.youtube.com/watch?v=06EuqHdEY_g" target="_blank"> <img class="img-fluid"
