--- a/students/hannah_grech_pirotta/index.html
+++ b/students/hannah_grech_pirotta/index.html
@@ -293,7 +293,7 @@ reflect upon their value of "home" through current data, highlighted by individu
         </div>
         <div class="row d-flex align-items-center">
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" data-lightbox="image-4" src="t2ab2.jpg" alt="">
+                <a href="#"> <img class="img-fluid" data-lightbox="image-4" src="abuse_culprit.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
