--- a/students/jacob_saliba/index.html
+++ b/students/jacob_saliba/index.html
@@ -315,8 +315,8 @@
                         src="synth44.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="https://www.youtube.com/watch?v=06EuqHdEY_g" target="_blank"> <img class="img-fluid"
-                        src="synth55.png" alt=""> </a>
+               
+                <img class="img-fluid" data-lightbox="image-3" src="synth55.png" alt=""> 
             </div>
 
         </div>
