Remove href images

--- a/students/hannah_grech_pirotta/index.html
+++ b/students/hannah_grech_pirotta/index.html
@@ -280,33 +280,26 @@ reflect upon their value of "home" through current data, highlighted by individu
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
                 <img class="img-fluid" data-lightbox="image-1" src="t2self1.jpg" alt="">
-
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
                 <img class="img-fluid" data-lightbox="image-2" src="t2loss1.jpg" alt="">
-
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" data-lightbox="image-3" src="t2ab3.jpg" alt="">
-                </a>
+                <img class="img-fluid" data-lightbox="image-3" src="t2ab3.jpg" alt="">
             </div>
         </div>
         <div class="row d-flex align-items-center">
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" data-lightbox="image-4" src="abuse_culprit.jpg" alt="">
-                </a>
+              <img class="img-fluid" data-lightbox="image-4" src="abuse_culprit.jpg" alt="">
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" data-lightbox="image-5" src="abuse_full.jpg" alt="">
-                </a>
+                <img class="img-fluid" data-lightbox="image-5" src="abuse_full.jpg" alt="">
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" data-lightbox="image-6" src="abuse_top.jpg" alt="">
-                </a>
+                <img class="img-fluid" data-lightbox="image-6" src="abuse_top.jpg" alt="">
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" data-lightbox="image-7" src="bags2.jpg" alt="">
-                </a>
+                <img class="img-fluid" data-lightbox="image-7" src="bags2.jpg" alt="">
             </div>
         </div>
     </div>
