group page images

--- a/group_page.html
+++ b/group_page.html
@@ -130,7 +130,8 @@
             <div class="col-md-3 col-6">
                 <a href="students/daniela_baldacchino/index.html">
                     <div class="d-flex justify-content-center">
-                        <img class="exhibition-img img-responsive" src="images/profile-img.png" alt="">
+                        <img class="exhibition-img img-responsive"
+                            src="images/group_page_images/daniela_baldacchino.png" alt="">
                     </div>
                     <div class="piece_text">
                         <h6>Baldacchino Daniela</h6>
@@ -146,7 +147,8 @@
             <div class="col-md-3 col-6">
                 <a href="students/chalise_bugeja/index.html">
                     <div class="d-flex justify-content-center">
-                        <img class="exhibition-img img-responsive" src="images/profile-img.png" alt="">
+                        <img class="exhibition-img img-responsive" src="images/group_page_images/chalise_bugeja.jpg"
+                            alt="">
                     </div>
                     <div class="piece_text">
                         <h6>Bugeja Chalise</h6>
@@ -165,7 +167,8 @@
             <div class="col-md-3 col-6">
                 <a href="students/luke_calleja/index.html">
                     <div class="d-flex justify-content-center">
-                        <img class="exhibition-img img-responsive" src="images/profile-img.png" alt="">
+                        <img class="exhibition-img img-responsive" src="images/group_page_images/luke_calleja.png"
+                            alt="">
                     </div>
                     <div class="piece_text">
                         <h6>Calleja Luke</h6>
@@ -181,7 +184,8 @@
             <div class="col-md-3 col-6">
                 <a href="students/anne_marie_camilleri/index.html">
                     <div class="d-flex justify-content-center">
-                        <img class="exhibition-img img-responsive" src="images/profile-img.png" alt="">
+                        <img class="exhibition-img img-responsive"
+                            src="images/group_page_images/annemarie_camilleri.jpg" alt="">
                     </div>
                     <div class="piece_text">
                         <h6>Camilleri Anne Marie</h6>
@@ -248,7 +252,8 @@
             <div class="col-md-3 col-6">
                 <a href="students/gaynor_d-amato/index.html">
                     <div class="d-flex justify-content-center">
-                        <img class="exhibition-img img-responsive" src="images/profile-img.png" alt="">
+                        <img class="exhibition-img img-responsive" src="images/group_page_images/gaynor_damato.png"
+                            alt="">
                     </div>
                     <div class="piece_text">
                         <h6>D’Amato Gaynor</h6>
@@ -331,7 +336,7 @@
             <div class="col-md-3 col-6">
                 <a href="students/neil_Grech/index.html">
                     <div class="d-flex justify-content-center">
-                        <img class="exhibition-img img-responsive" src="images/profile-img.png" alt="">
+                        <img class="exhibition-img img-responsive" src="images/group_page_images/neil_grech.png" alt="">
                     </div>
                     <div class="piece_text">
                         <h6>Grech Neil</h6>
@@ -347,7 +352,8 @@
             <div class="col-md-3 col-6">
                 <a href="students/hannah_grech_pirotta/index.html">
                     <div class="d-flex justify-content-center">
-                        <img class="exhibition-img img-responsive" src="images/profile-img.png" alt="">
+                        <img class="exhibition-img img-responsive"
+                            src="images/group_page_images/hannah_grechpirotta.jpg" alt="">
                     </div>
                     <div class="piece_text">
                         <h6>Grech Pirotta Hannah</h6>
@@ -398,7 +404,8 @@
             <div class="col-md-3 col-6">
                 <a href="students/andrew_inguanez/index.html">
                     <div class="d-flex justify-content-center">
-                        <img class="exhibition-img img-responsive" src="images/profile-img.png" alt="">
+                        <img class="exhibition-img img-responsive" src="images/group_page_images/andrew_inguanez.jpg"
+                            alt="">
                     </div>
                     <div class="piece_text">
                         <h6>Inguanez Andrew</h6>
@@ -532,7 +539,8 @@
             <div class="col-md-3 col-6">
                 <a href="students/luigi_rizzo/index.html">
                     <div class="d-flex justify-content-center">
-                        <img class="exhibition-img img-responsive" src="images/profile-img.png" alt="">
+                        <img class="exhibition-img img-responsive" src="images/group_page_images/luigi_rizzo.png"
+                            alt="">
                     </div>
                     <div class="piece_text">
                         <h6>Rizzo Luigi</h6>
@@ -548,7 +556,8 @@
             <div class="col-md-3 col-6">
                 <a href="students/jacob_saliba/index.html">
                     <div class="d-flex justify-content-center">
-                        <img class="exhibition-img img-responsive" src="images/profile-img.png" alt="">
+                        <img class="exhibition-img img-responsive" src="images/group_page_images/jacob_saliba.png"
+                            alt="">
                     </div>
                     <div class="piece_text">
                         <h6>Saliba Jacob</h6>
@@ -615,7 +624,8 @@
             <div class="col-md-3 col-6">
                 <a href="students/francesco_vella/index.html">
                     <div class="d-flex justify-content-center">
-                        <img class="exhibition-img img-responsive" src="images/profile-img.png" alt="">
+                        <img class="exhibition-img img-responsive" src="images/group_page_images/francesco_vella.jpg"
+                            alt="">
                     </div>
                     <div class="piece_text">
                         <h6>Vella Francesco</h6>
@@ -634,7 +644,8 @@
             <div class="col-md-3 col-6">
                 <a href="students/rakel_vella/index.html">
                     <div class="d-flex justify-content-center">
-                        <img class="exhibition-img img-responsive" src="images/profile-img.png" alt="">
+                        <img class="exhibition-img img-responsive" src="images/group_page_images/rakel_vella.jpg"
+                            alt="">
                     </div>
                     <div class="piece_text">
                         <h6>Vella Rakel</h6>
