updated own title lol

--- a/group_page.html
+++ b/group_page.html
@@ -650,7 +650,7 @@
                     <div class="piece_text">
                         <h6>Vella Rakel</h6>
                         <div class="title_of_piece">
-                            <h5>The Glass Room</h5>
+                            <h5>The Glass Box</h5>
                         </div>
                     </div>
                 </a>
