--- a/students/neil_Grech/index.html
+++ b/students/neil_Grech/index.html
@@ -17,7 +17,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:300,400&display=swap" rel="stylesheet">
     <!--Change student name here-->
-    <title>Student Name | CTRL Z</title>
+    <title> Neil Grech | CTRL Z</title>
 </head>
 
 <body>
@@ -226,7 +226,7 @@
                         <img class="img-fluid rounded-circle profile_picture" src="http://placehold.it/150x150"
                             alt="PERSONAL IMAGE">
                         <!--Change your name and surname here-->
-                        <h3>Name Surname</h3>
+                        <h3> Neil Grech </h3>
                     </div>
                 </div>
                 <!--Change your project name here-->
