--- a/students/neil_Grech/index.html
+++ b/students/neil_Grech/index.html
@@ -230,7 +230,7 @@
                     </div>
                 </div>
                 <!--Change your project name here-->
-                <h2>Project Name</h2>
+                <h2>Interaction in Performance</h2>
                 <!--Change you project description here, max 150 words-->
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
                     pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus.
